# Adlytics

./: .gitignore  README.md  pyproject.toml  test_env.py
infrastructure_layer/: settings.py
ingestion/: base_client.py
ingestion_service/: base_client.py
notifications_service/: base_sender.py  dispatcher.py
notifications_service/email_sender/: email_sender.py
notifications_service/sms_sender/: sms_sender.py
notifications_service/tg_sender/: bot_factory.py  telegram_sender.py
tests/: conftest.py  test_base_client.py
tests/ingestion_tests/: conftest.py  test_base_client.py
