[project]
name = "adlytics"
version = "0.1.0"
description = "Ads analytics platform"
authors = [
    {name = "Chevalier88"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp (>=3.13.0,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
